--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,8 @@
             android:layout_marginBottom="10dp"
             android:background="@color/colorWhite"
             android:orientation="horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             app:layout_constraintBottom_toBottomOf="parent">
             <ImageView
                 android:id="@+id/search_button"
@@ -57,6 +59,7 @@
 
     </android.support.constraint.ConstraintLayout>
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:overScrollMode="never"
@@ -232,12 +235,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_margin="10dp"
+                android:descendantFocusability="blocksDescendants"
                 android:orientation="vertical">
-                <androidx.recyclerview.widget.RecyclerView
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list_video"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
-                </androidx.recyclerview.widget.RecyclerView>
+                    android:scrollbars="horizontal"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
             </LinearLayout>
             <LinearLayout
