--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     <io.codetail.widget.RevealFrameLayout
         android:id="@+id/container_frame"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -43,7 +44,17 @@
 
         </android.support.v7.widget.Toolbar>
 
-
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:layout_gravity="bottom|center"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-5382921366365796/2787033298">
+        </com.google.android.gms.ads.AdView>
 
     </io.codetail.widget.RevealFrameLayout>
 
@@ -62,5 +73,6 @@
             android:divider="@android:color/transparent"
             android:background="@android:color/transparent">
         </LinearLayout>
+
     </ScrollView>
 </android.support.v4.widget.DrawerLayout>
