--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -199,6 +199,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/layoutthird">
                 <ImageView
+                    android:id="@+id/img_report"
+                    android:src="@drawable/icon_report"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="8dp"
@@ -223,7 +225,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="레시피 더보기"
+                    android:text="그 외 요리"
                     android:textColor="@color/colorBlack"
                     android:textStyle="bold"
                     android:textSize="22dp">
