--- a/app/src/main/res/layout/fragment_coffee.xml
+++ b/app/src/main/res/layout/fragment_coffee.xml
@@ -20,6 +20,9 @@
             android:id="@+id/listview_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
     </LinearLayout>
 
 
