--- a/app/src/main/res/layout/fragment_dersert.xml
+++ b/app/src/main/res/layout/fragment_dersert.xml
@@ -21,6 +21,9 @@
             android:id="@+id/listview_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
     </LinearLayout>
 
 
